images not showing bug fixed

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
   position: relative;
   width: 36px;
   height: 28px;
-  background: url(toggle.png);
+  background: url(images/toggle.png);
   background-size: cover;
   cursor: pointer;
 }
@@ -102,7 +102,7 @@
 }
 
 .about .imgBx{
-  background: url(window.jpg);
+  background: url(images/window.jpg);
   width: 50%;
   background-size: cover;
   background-position: center;
@@ -236,14 +236,14 @@
 }
 
 .imgBx2{
-  background: url(bg2.jpg);
+  background: url(images/bg2.jpg);
   background-size:cover;
   background-position: center;
   width: 50%;
 }
 
 .redbg{
-  background: url(red.jpg) !important;
+  background: url(images/red.jpg) !important;
   background-size: cover;
   background-position: center;
 }
